--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,22 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ropni1/source/repos/SmartCity/jade/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ropni1/source/repos/SmartCity/jade/jade.jar"/>
+	<classpathentry kind="lib" path="dependencies/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="dependencies/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="dependencies/directions-api-client-hc-0.12.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/graphhopper-api-0.12.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/graphhopper-web-api-0.12.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/jackson-annotations-2.9.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/jackson-core-2.9.6.jar"/>
+	<classpathentry kind="lib" path="dependencies/jackson-databind-2.9.6.jar"/>
+	<classpathentry kind="lib" path="dependencies/jackson-datatype-jts-0.12-2.5-1.jar"/>
+	<classpathentry kind="lib" path="dependencies/jade.jar"/>
+	<classpathentry kind="lib" path="dependencies/jts-core-1.15.1.jar"/>
+	<classpathentry kind="lib" path="dependencies/jxmapviewer2-2.5.jar"/>
+	<classpathentry kind="lib" path="dependencies/okhttp-3.8.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/okio-1.13.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="dependencies/slf4j-simple-1.7.25.jar"/>
+	<classpathentry kind="lib" path="dependencies/trove4j-3.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
