--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,10 @@
 		    <artifactId>javatuples</artifactId>
 		    <version>1.2</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.googlecode.json-simple</groupId>
+    		<artifactId>json-simple</artifactId>
+    		<version>1.1.1</version>
+		</dependency>
     </dependencies>
 </project>
