--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,19 @@
   <groupId>agentSystems</groupId>
   <artifactId>smartCity</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>smartCity</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <name>smartCity</name>
   <description>Best project ever</description>
   <packaging>jar</packaging>
     <properties>
