--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
   <groupId>agentSystems</groupId>
   <artifactId>smartCity</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>mvn-repo</id>
+            <name>mvn repository</name>
+            <url>https://jade.tilab.com/maven/</url>
+        </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
@@ -12,10 +19,12 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+                <version>3.8.1</version>
             </plugin>
         </plugins>
     </build>
     <name>smartCity</name>
+
   <description>Best project ever</description>
   <packaging>jar</packaging>
     <properties>
@@ -62,5 +71,15 @@
     		<artifactId>json-simple</artifactId>
     		<version>1.1.1</version>
 		</dependency>
-    </dependencies>
+      <dependency>
+          <groupId>org.jxmapviewer</groupId>
+          <artifactId>jxmapviewer2</artifactId>
+          <version>2.5</version>
+      </dependency>
+      <dependency>
+          <groupId>com.tilab.jade</groupId>
+          <artifactId>jade</artifactId>
+          <version>4.5.0</version>
+      </dependency>
+  </dependencies>
 </project>
