--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>agentSystems</groupId>
-  <artifactId>smartCity</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>agentSystems</groupId>
+    <artifactId>smartCity</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <repositories>
         <repository>
-            <id>mvn-repo</id>
-            <name>mvn repository</name>
+            <id>jade-repo</id>
+            <name>jade repository</name>
             <url>https://jade.tilab.com/maven/</url>
         </repository>
     </repositories>
@@ -16,8 +17,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>14</source>
+                    <target>14</target>
                 </configuration>
                 <version>3.8.1</version>
             </plugin>
@@ -25,15 +26,13 @@
     </build>
     <name>smartCity</name>
 
-  <description>Best project ever</description>
-  <packaging>jar</packaging>
+    <description>Best project ever</description>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        <slf4j.version>1.7.12</slf4j.version>
+        <slf4j.version>1.7.0</slf4j.version>
     </properties>
-  <dependencies>
+    <dependencies>
         <dependency>
             <groupId>com.graphhopper</groupId>
             <artifactId>graphhopper-core</artifactId>
@@ -62,24 +61,24 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-		    <groupId>org.javatuples</groupId>
-		    <artifactId>javatuples</artifactId>
-		    <version>1.2</version>
-		</dependency>
-		<dependency>
-    		<groupId>com.googlecode.json-simple</groupId>
-    		<artifactId>json-simple</artifactId>
-    		<version>1.1.1</version>
-		</dependency>
-      <dependency>
-          <groupId>org.jxmapviewer</groupId>
-          <artifactId>jxmapviewer2</artifactId>
-          <version>2.5</version>
-      </dependency>
-      <dependency>
-          <groupId>com.tilab.jade</groupId>
-          <artifactId>jade</artifactId>
-          <version>4.5.0</version>
-      </dependency>
-  </dependencies>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jxmapviewer</groupId>
+            <artifactId>jxmapviewer2</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tilab.jade</groupId>
+            <artifactId>jade</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+    </dependencies>
 </project>
