--- a/frontend/smart-city/package.json
+++ b/frontend/smart-city/package.json
@@ -13,6 +13,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-react": "^7.20.3",
     "prettier": "^1.19.1"
   },
   "scripts": {
