--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -104,5 +104,15 @@
             <artifactId>guice</artifactId>
             <version>4.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+            <version>4.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
     </dependencies>
 </project>
