--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
     "react-scripts": "3.4.1",
     "leaflet": "1.6.0",
     "react-leaflet": "2.7.0",
-    "react-notify-toast": "0.5.1",
-    "react-split-pane": "0.1.91"
+    "react-notify-toast": "0.5.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
