--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,18 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "redux-devtools-extension": "2.13.8",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-react": "^7.20.3",
-    "prettier": "^1.19.1"
+    "mocha": "^8.1.1",
+    "prettier": "^1.19.1",
+    "redux-devtools-extension": "2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
