--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,13 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-react": "^7.20.3",
-    "mocha": "^8.1.1",
     "prettier": "^1.19.1",
     "redux-devtools-extension": "2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
