--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=INFO, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd' 'HH:mm:ss.SSS} %-5p [%c] - %m%n
+log4j.appender.stdout.layout=com.jcabi.log.MulticolorLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%color{%-p}] [%c] - %m%n
