Add tests for Zone. Fix isInCircle method.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -127,6 +127,13 @@
             <version>5.7.0-M1</version>
             <scope>test</scope>
         </dependency>
+        <!-- For parametrized tests -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.7.0-M1</version>
+            <scope>test</scope>
+        </dependency>
         <!-- For @NotNull -->
         <dependency>
             <groupId>org.jetbrains</groupId>
