--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,6 +28,7 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
                 <version>3.8.1</version>
             </plugin>
@@ -37,6 +38,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
             </plugin>
+
         </plugins>
     </build>
 
