--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -148,5 +148,11 @@
             <artifactId>jcabi-log</artifactId>
             <version>0.17.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
