Add logging to file.

--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -1,5 +1,24 @@
-log4j.rootLogger=INFO, stdout
+# For the general syntax of property based configuration files see
+# the documentation of org.apache.log4j.PropertyConfigurator.
+# The root category uses two appenders: stdout and file.
+# The first one gathers output only starting with priority INFO,
+#  the latter all output
+# The root priority is DEBUG, so that all classes can be logged unless
+# defined otherwise in more specific properties.
+log4j.rootLogger=DEBUG, stdout, file
+# Console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.threshold=INFO
 log4j.appender.stdout.layout=com.jcabi.log.MulticolorLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%color{%-p}] [%c] - %m%n
+# File
+log4j.appender.file=org.apache.log4j.rolling.RollingFileAppender
+log4j.appender.file.file=/SmartCity_logs/smart-city.log
+log4j.appender.file.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
+log4j.appender.file.RollingPolicy.FileNamePattern=/SmartCity_logs/%d{yyyy-MM-dd}.log
+log4j.appender.file.threshold=DEBUG
+log4j.appender.file.append=true
+log4j.appender.file.immediateFlush=false
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%-p] [%c] - %m%n
