--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -148,11 +148,19 @@
             <artifactId>jcabi-log</artifactId>
             <version>0.17.1</version>
         </dependency>
+        <!-- For dynamic log file name -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>apache-log4j-extras</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <!-- For mocks in tests -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>3.0.0</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 </project>
