--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -161,6 +161,11 @@
             <version>3.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.9.10</version>
+        </dependency>
 
     </dependencies>
 </project>
