--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "checkJs": true,
+    "checkJs": false,
     "jsx": "react"
   },
   "exclude": ["node_modules", "**/node_modules/*"]
