--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -15,6 +15,11 @@
     "fetch": true
   },
   "root": true,
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "rules": {
     "babel/no-unused-expressions": 0,
     "import/no-extraneous-dependencies": 0,
@@ -46,15 +51,6 @@
     "jest/no-identical-title": 2,
     "jest/prefer-to-have-length": 1,
     "jest/valid-expect": 2,
-    "sort-imports": [
-      1,
-      {
-        "ignoreCase": false,
-        "ignoreDeclarationSort": false,
-        "ignoreMemberSort": false,
-        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
-        "allowSeparatedGroups": false
-      }
-    ]
+    "react/prop-types": 0
   }
 }
