--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-autofix": "^1.0.2",
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-react": "^7.20.3",
     "prettier": "^1.19.1",
