--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -47,6 +47,7 @@
     ],
     "object-curly-spacing": 2,
     "object-curly-newline": 0,
+    "no-plusplus": 0,
     "camelcase": 1,
     "arrow-parens": 0,
     "comma-dangle": 0,
@@ -60,6 +61,8 @@
     "no-mixed-operators": 0,
     "prefer-template": 1,
     "no-console": 0,
+    "implicit-arrow-linebreak": 0,
+    "function-paren-newline": 0,
     "linebreak-style": [
       1,
       "windows"
@@ -90,6 +93,7 @@
         ]
       }
     ],
+    "react/jsx-one-expression-per-line": 0,
     "prettier/prettier": 2
   }
 }
