--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "2.7.0",
+    "react-leaflet-markercluster": "^2.0.0",
     "react-notify-toast": "0.5.1",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.4",
