--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
