Fix configurations. Fix public access to internal variable.
(cherry picked from commit cc66d4454135044d59f08d694d731da348f67519)

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -34,15 +34,15 @@ MTPs-Main-Container.txt
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-.idea/workspace.xml
-.idea/artifacts
-.idea/compiler.xml
-.idea/jarRepositories.xml
-.idea/modules.xml
-.idea/*.iml
-.idea/modules
-*.iml
-*.ipr
+#.idea/workspace.xml
+#.idea/artifacts
+#.idea/compiler.xml
+#.idea/jarRepositories.xml
+#.idea/modules.xml
+#.idea/*.iml
+#.idea/modules
+#.iml
+#*.ipr
 
 # Intellij settings
 .idea/.name
