--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -63,6 +63,7 @@
     "no-console": 0,
     "implicit-arrow-linebreak": 0,
     "function-paren-newline": 0,
+    "no-nested-ternary": 0,
     "linebreak-style": [
       1,
       "windows"
@@ -74,7 +75,7 @@
     "prefer-const": [
       2,
       {
-        "destructuring": "any",
+        "destructuring": "all",
         "ignoreReadBeforeAssign": false
       }
     ],
@@ -94,6 +95,7 @@
       }
     ],
     "react/jsx-one-expression-per-line": 0,
-    "prettier/prettier": 2
+    "prettier/prettier": 2,
+    "jsx-a11y/label-has-associated-control": 0
   }
 }
