--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,15 +19,16 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-autofix": "^1.0.2",
-    "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.20.3",
     "prettier": "^1.19.1",
+    "prettier-eslint": "^11.0.0",
     "redux-devtools-extension": "2.13.8"
   },
   "scripts": {
