--- a/backend/config/graphHopper.properties
+++ b/backend/config/graphHopper.properties
@@ -8,7 +8,7 @@ graph.dataaccess=RAM_STORE
 # prepare.chWeighting=no
 prepare.ch.weightings=no
 
-graph.flagEncoders=foot,car
+graph.flagEncoders=foot,car,bike
 # graph.bytesForFlags=8
 
 prepare.minNetworkSize=200
