--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "leaflet": "1.6.0",
+    "moment": "2.29.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-flatpickr": "^3.10.6",
     "react-leaflet": "2.7.0",
     "react-leaflet-markercluster": "^2.0.0",
+    "react-live-clock": "^5.0.10",
     "react-notify-toast": "0.5.1",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.4",
