Add first 'jest' test - for SimulationStarter

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -3,5 +3,13 @@
     "checkJs": false,
     "jsx": "react"
   },
-  "exclude": ["node_modules", "**/node_modules/*"]
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*"
+  ],
+  "typeAcquisition": {
+    "include": [
+      "jest"
+    ]
+  }
 }
