--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.20.3",
+    "jest": "24.9.0",
+    "@types/jest": "24.9.0",
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
     "redux-devtools-extension": "2.13.8"
