--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
+    "@types/jest": "24.9.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.14.0",
@@ -32,7 +35,6 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.20.3",
     "jest": "24.9.0",
-    "@types/jest": "24.9.0",
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
     "redux-devtools-extension": "2.13.8"
