--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,15 +1,10 @@
 {
   "compilerOptions": {
-    "checkJs": false,
+    "checkJs": true,
     "jsx": "react"
   },
   "exclude": [
     "node_modules",
     "**/node_modules/*"
   ],
-  "typeAcquisition": {
-    "include": [
-      "jest"
-    ]
-  }
 }
