--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,13 +37,16 @@
     "jest": "24.9.0",
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
-    "redux-devtools-extension": "2.13.8"
+    "redux-devtools-extension": "2.13.8",
+    "jsdoc": "3.6.6",
+    "better-docs": "2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docs": "jsdoc -c jsdoc.conf.json"
   },
   "eslintConfig": {
     "extends": "react-app"
