--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,15 @@
     "leaflet": "1.6.0",
     "leaflet-rotatedmarker": "^0.2.0",
     "moment": "2.29.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-flatpickr": "^3.10.6",
     "react-leaflet": "2.7.0",
     "react-leaflet-markercluster": "^2.0.0",
-    "react-live-clock": "^5.0.10",
+    "react-live-clock": "^5.0.13",
     "react-notify-toast": "0.5.1",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
@@ -22,24 +22,24 @@
   },
   "devDependencies": {
     "@types/jest": "24.9.0",
+    "better-docs": "2.3.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-autofix": "^1.0.2",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-autofix": "^1.0.3",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
     "jest": "24.9.0",
+    "jsdoc": "3.6.6",
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
-    "redux-devtools-extension": "2.13.8",
-    "jsdoc": "3.6.6",
-    "better-docs": "2.3.2"
+    "redux-devtools-extension": "2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
