Fix config location.
(cherry picked from commit fba0f19fc25b1b9bd7e99282dbd3beb03c5bf815)

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,9 +26,10 @@
         <resources>
             <resource>
                 <directory>${resourceFolder}</directory>
-                <targetPath>${project.build.directory}</targetPath>
                 <includes>
                     <include>log4j.xml</include>
+                    <include>crossroads.xml</include>
+                    <include>graphHopper.properties</include>
                     <include>config.properties</include>
                 </includes>
             </resource>
@@ -67,7 +68,6 @@
                                 <resource>
                                     <directory>${basedir}</directory>
                                     <includes>
-                                        <include>config/**</include>
                                         <include>mazowieckie-latest.osm-gh/**</include>
                                     </includes>
                                 </resource>
