--- a/backend/src/main/resources/config.properties
+++ b/backend/src/main/resources/config.properties
@@ -1,2 +1,6 @@
 JADE_PORT=4000
 WEB_PORT=9000
+OVERPASS_APIS=https://lz4.overpass-api.de/api/interpreter,\
+  https://z.overpass-api.de/api/interpreter,\
+  https://overpass.kumi.systems/api/interpreter,\
+  https://overpass.openstreetmap.ru/api/interpreter
